<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logDisplayTextView"
        android:layout_width="390dp"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/exerciseLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/exercise"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logDisplayTextView" />

    <EditText
        android:id="@+id/exerciseInputEditText"
        android:layout_width="345dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_an_exercise"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/exerciseLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/exerciseLabelTextView" />

    <TextView
        android:id="@+id/weightLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/weight"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exerciseLabelTextView" />

    <EditText
        android:id="@+id/weightInputEditText"
        android:layout_width="345dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_a_weight"
        android:inputType="number|numberDecimal"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/weightLabelTextView" />
    <TextView
        android:id="@+id/repLabelTextView"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/reps"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightLabelTextView" />

    <EditText
        android:id="@+id/repInputEditText"
        android:layout_width="345dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_reps"
        android:inputType="number|numberDecimal"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/repLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/repLabelTextView" />
    <Button
        android:id="@+id/logButton"
        android:layout_width="300dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        android:text="@string/log"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repInputEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>